--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kjAK369V6yQEnUiQ/WL4OtPkaYenRuXBscrF83IfoCXuWzoW5klvSRlCe34cpCjVW4Q9AXaNGh5HPVIbCw3Y1HWAZk+yBpOElh09KQnq1RN43zbhxn4KAbK8IWBDDSJk">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zWb1kR4qw7vdkYDhyxnuu6S2VauaYK0GYuUnvh3hrpqYLdfJ4iVxshIQt7O1mLmaA38uJpfLlvmSNtpD3L8Sdc8P0sfvgSAwKb9Vl/PJx31dvJk+i2TaKwO3mtgpEtf/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
