--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -11,14 +11,15 @@
 Если вам нужен рекламный ролик, озвучить видео или  записать аудиокнигу, автоответчик, IVR вам нужно оставить заявку в поле обратной связи">
   
   <title>DiktorAlaeff</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -56,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -70,7 +71,7 @@
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. &nbsp;Для начала можете прослушать демо. Так же создаю музыкально звуковое оформление</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Диктор</a> <a class="btn btn-md btn-white display-5" href="Sound Design.html">Звуковой дизайн</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Диктор</a> <a class="btn btn-md btn-white display-5" href="Sound Design.html"><span class="mobi-mbri mobi-mbri-video-play mbr-iconfont mbr-iconfont-btn"></span>Звуковой дизайн</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 110%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ETnXtOTOABM?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
@@ -222,7 +223,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i7SILmbnhEsW7G/Toevaw/o24Caw/c4+gx48tujJvlEPpMnNrhN+xXPuRUrIfwJH4bjFlX8jl8f4OM9S9iR9hssu/rCZnAfmrv1Rd9EbJ9fEjJuHC9J6Lsd8JCtbA+SI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GWr1jQkkFR8lKwF3Z38gQt2lBqz8C1LvnqKIeWAUAB4WI92/TK1JVUw2uQzsZxL07+WzYU5BT5J/Cz4ZgO+6jdPCf4mWgmwiZO5iugrAoVed+8+VZlJMlwxrl5pX+vpc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -384,10 +385,10 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
+  <script src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
