--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
 
     
 
@@ -70,7 +70,7 @@
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">Озвучание рекламных роликов, аудиокниг, IVR, различных презентаций и многое другое.<br>Чтобы узнать подробнее листайте ниже. &nbsp;Для начала можете прослушать демо. Так же создаю музыкально звуковое оформление</p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-warning display-5" href="DemoAudio.html">Диктор</a> <a class="btn btn-md btn-warning display-5" href="Sound Design.html">Звуковой дизайн</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-5" href="DemoAudio.html">Диктор</a> <a class="btn btn-md btn-white display-5" href="SoundDesign.html">Звуковой дизайн</a></div>
             </div>
 
             <div class="mbr-figure" style="width: 110%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/ETnXtOTOABM?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
@@ -222,7 +222,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="h+v/GkvXG3wLvlzslb7cXwjYRheJQ9KFy+IWORezOfRoskC1eInkvy4ONwXzkZo69GpgwPqPDHeasgwiJJhNnUyYNbp+Xfq8ClVaVIPziKrFLL+P9gNBGrhxOxY8sg4w">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3FctBthltZqC0yJ5wBjm2f3tnArHZouUgcv1TUl8ywKclS8XI9EQ1l8RFBYsORMYTAqjoVv6iYfIYHDOCI0Y1MsEQAw2/SD2Q7OdbdfOjBVAMK4MDMNB04Gb8Sq3NX6b">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
