--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="header7 cid-rup70sCnOZ" id="header7-3">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -145,8 +145,7 @@
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">
                                 Озвучание автоответчика, IVR (до 30 сек)</h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">
-                                250р</p>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">300р</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">
@@ -222,7 +221,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3FctBthltZqC0yJ5wBjm2f3tnArHZouUgcv1TUl8ywKclS8XI9EQ1l8RFBYsORMYTAqjoVv6iYfIYHDOCI0Y1MsEQAw2/SD2Q7OdbdfOjBVAMK4MDMNB04Gb8Sq3NX6b">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F7H1Lt/0Oh4LMsgmsJE7xVQqmXOptxV1McVJLXMuxxb2gP3Hk1+7Z2JkpddFOodSpPtlTO9Jh1eN9WkSFdx6nYH8XH6qVP3ripnxoAnVq+X2INJl7bpTyYxf/4b9okMh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
