--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -221,7 +221,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F7H1Lt/0Oh4LMsgmsJE7xVQqmXOptxV1McVJLXMuxxb2gP3Hk1+7Z2JkpddFOodSpPtlTO9Jh1eN9WkSFdx6nYH8XH6qVP3ripnxoAnVq+X2INJl7bpTyYxf/4b9okMh">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iV9OFKRb064aWCK/M+xOyrv2pNHR+nFCzM9vVfRJ/HMH398OfWNbyK17IBopCpSrc64H4DOmNxQi22N1YFNnYJGsx8BRMf1KAZV08IURiuX/jz7AIRtTYlXKL/wQxd40">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
