--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -114,7 +114,7 @@
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">Рекламный ролик (до 30 сек)&nbsp;</h4>
                             <p class="mbr-text cost mbr-fonts-style m-0 display-5">
-                                300р</p>
+                                350р</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">Сведение с музыкой +25%&nbsp;<br><br></p>
@@ -130,7 +130,7 @@
                             <h4 class="card-title mbr-fonts-style display-5">
                                 Озвучание видео (до 30 сек)</h4>
                             <p class="mbr-text cost mbr-fonts-style m-0 display-5">
-                                300р</p>
+                                350р</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">Сведение звуковой дорожки с видео +25%<br>Если размер видео превышает 5 минут, цена за 30сек - 200р</p>
@@ -175,8 +175,7 @@
                     <div class="card-box">
                         <div class="top-line pb-3">
                             <h4 class="card-title mbr-fonts-style display-5">Озвучание других текстов (до 30 сек)</h4>
-                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">
-                                250р</p>
+                            <p class="mbr-text cost mbr-fonts-style m-0 display-5">300р</p>
                         </div>
                         <div class="bottom-line">
                             <p class="mbr-text mbr-fonts-style m-0 b-descr display-7">
@@ -221,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iV9OFKRb064aWCK/M+xOyrv2pNHR+nFCzM9vVfRJ/HMH398OfWNbyK17IBopCpSrc64H4DOmNxQi22N1YFNnYJGsx8BRMf1KAZV08IURiuX/jz7AIRtTYlXKL/wQxd40">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bfSiBro3NRHW6TAr24f9Jl28iA47J9jlFPxa+HsTvAKfTAsXeHGcfYu69U+kKdiBJQOxFeHsm8F0LW9q9/ZXbeAIjVc4p7gsXTcDgWmPiu5IzmigQy28CVtP2fi+jYJs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
