--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -220,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bfSiBro3NRHW6TAr24f9Jl28iA47J9jlFPxa+HsTvAKfTAsXeHGcfYu69U+kKdiBJQOxFeHsm8F0LW9q9/ZXbeAIjVc4p7gsXTcDgWmPiu5IzmigQy28CVtP2fi+jYJs">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tD0tX94KFEVHoc/8P+LRI8DSBWt8Lofr05AfCYo6EGrjeODuXFO6MXdFW7C4E33G2Apgu3HbsiRPiIOvB1Db8eYgsPOFEJyEUcoJxS8fc+Ya957rUSzOET9MIdKIIkA4">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
