--- a/DiktorAlaeff.html
+++ b/DiktorAlaeff.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header7 cid-rv4wolT90A" id="header7-4">
 
     
 
@@ -220,7 +220,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XVYqndZ9jmKgq20FjWgyDnRv44mWVluU8dAPtTpN7p7DYDCEaEs85KU9hHQRAYeRYkLmS+98YEhYL59NqXRCU9fjYtFYlfPtaSzjXCIFrGhot4Hyjycpx1o6idDuDWPF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xBlb5+pi+f2FXWWOTMIU1GfVS4ICF87rjLpVMh+4uRl7eupJj5A3zHEl75I8bh2pwZXGwl8OeaLI35WJW/g0PEbroNbMcYWr7/LQ/LKovuG7Jjg5fvEGr0ZTN2tGKl4=">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение! Надеюсь на плодотворное сотрудничество</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
